# bot-vturb-extrator

./: README.md  execution_db.json  pyproject.toml
analytics/2.1 [VSL IA] - Assistente x Agentes - Com delay/: 09-03-2025_Origem-do-Trafego.csv
analytics/2.2 [VSL IA] - Assistente x Agentes - Sem delay/: 09-03-2025_Origem-do-Trafego.csv
analytics/2.3 [VSL IA] - Assistente x Agentes - Trilha.mp4/: 09-03-2025_Origem-do-Trafego.csv
analytics/2.4 [VSL IA] - Assistente x Agentes - 24Horas.mp4/: 09-03-2025_Origem-do-Trafego.csv
analytics/2.5 [VSL IA] - Assistente x Agentes - Vitalicio.mp4/: 09-03-2025_Origem-do-Trafego.csv
analytics/2.6 [VSL IA] - Assistente x Agentes - Anual.mp4/: 09-03-2025_Origem-do-Trafego.csv
analytics/3.1. [VSL IA] - Solution Aware Pura (com delay)/: 09-03-2025_Origem-do-Trafego.csv
analytics/3.2.1. [VSL IA] - Solution Aware - Nativo (com delay)/: 09-03-2025_Origem-do-Trafego.csv
analytics/3.2.2. [VSL IA] - Solution Aware - Nativo (sem delay).mp4/: 09-03-2025_Origem-do-Trafego.csv
analytics/3.2.3. [VSL IA] - Solution Aware - Nativo (LP normal)/: 09-03-2025_Origem-do-Trafego.csv
analytics/4.1. [VSL IA] - Analisador de Currículos/: 09-03-2025_Origem-do-Trafego.csv
analytics/4.2. [VSL IA] - Analisador de Currículos - Revelado/: 09-03-2025_Origem-do-Trafego.csv
analytics/5.1 [VSL IA] - Como construir suas IAs - Trilha.mp4/: 09-03-2025_Origem-do-Trafego.csv
assets/: doc.html
docs/: api.md
vturb/: api.py  app.py  browser.py  execution_manager.py  files.py  logger.py
(+1 files in other folders)
